fix UI bugs merge string from dev branch

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -301,9 +301,8 @@
     <string name="popup_delete_photo">写真を削除する</string>
     <string name="this_is_a_group_chat">グループメッセージを送信する</string>
     <string name="unable_to_securely_share_this_file">このファイルを安全に共有できません</string>
-    <string name="your_keystore_is_corrupted_please_re_install_chatsecure_or_clear_data_for_the_app">キーストアが破損しています。 Wrappyを再インストールするか、アプリの「データをクリア」してください</string>
     <string name="swipe_hint">その他のオプションを表示するには左右にスワイプ</string>
-    <string name="no_convos">Wrappyを開始する時間！</string>
+    <string name="no_convos">Wrappyへようこそ！</string>
     <string name="title_more">発見</string>
     <string name="title_me">私</string>
     <string name="no_photos">共有して受信した写真がここに表示されます</string>
@@ -314,7 +313,7 @@
     <string name="Page1Title">Wrappy</string>
     <string name="Page2Title">無料</string>
     <string name="Page3Title">クラウド</string>
-    <string name="Page4Title">安全な</string>
+    <string name="Page4Title">安全</string>
     <string name="Page5Title">マジック</string>
     <string name="Page6Title">ストレージ</string>
     <string name="Page7Title">速い</string>
@@ -335,11 +334,11 @@
     <string name="Page11Message">時代に革命を起こすSNSのパイオニア</string>
     <string name="StartMessaging">メッセージを開始する</string>
 
-    <string name="id_or_username">ユーザーIDの入力</string>
-    <string name="forget_password">パスワードを忘れた</string>
+    <string name="id_or_username">ユーザーID</string>
+    <string name="forget_password">パターンパスを忘れた</string>
     <string name="login">ログイン</string>
-    <string name="waiting_dialog">待っている…</string>
-    <string name="search_username">ユーザーIDの検索</string>
+    <string name="waiting_dialog">読み込み中…</string>
+    <string name="search_username">友達のユーザーIDから追加</string>
     <string name="add_contact">連絡先を追加</string>
     <string name="title_activity_wallet__complete_">Wallet_Complete_Activity</string>
 
@@ -365,13 +364,13 @@
     <!-- Settings conversation -->
     <string name="setting_screen">設定</string>
     <string name="setting_search">サーチ</string>
-    <string name="setting_clear">履歴をクリア</string>
-    <string name="setting_delete_and_leave_group">グループを削除して離れる</string>
+    <string name="setting_clear">会話履歴消去</string>
+    <string name="setting_delete_and_leave_group">グループ退出</string>
     <string name="setting_leave_group">グループを離れる</string>
-    <string name="setting_delete_chat">チャットの削除</string>
+    <string name="setting_delete_chat">会話を削除</string>
     <string name="setting_report_spam">スパム報告</string>
     <string name="setting_notification">通知</string>
-    <string name="setting_change_background">背景を変更する</string>
+    <string name="setting_change_background">背景を変更</string>
     <string name="setting_add_member">友人を追加する</string>
     <string name="incoming_attachment">1つの添付ファイル</string>
 
@@ -420,18 +419,18 @@
     <string name="new_list">新しいリスト</string>
     <string name="key_manager">キーマネージャー</string>
     <string name="add_another_account">別のアカウントを追加する</string>
-    <string name="check_email_passcode">メッセージを確認してパスコードを入力してください</string>
-    <string name="vertify_title_noti">私たちは</string>
-    <string name="send_again">パスコードを再送信</string>
+    <string name="check_email_passcode">5桁の認証コードをこちらの電話番号に送信しました。\nメッセージボックスを確認し、コードを入力してください</string>
+    <string name="vertify_title_noti">携帯電話番号</string>
+    <string name="send_again">認証コードをもう一度送る</string>
     <string name="answer_secret_question">あなたの秘密の質問に答えてください</string>
     <string name="your_answer">あなたの答え</string>
-    <string name="btn_next">次</string>
+    <string name="btn_next">進む</string>
     <string name="input_your_email">あなたの電子メールを入力</string>
     <string name="hint_your_email">あなたのメールアドレス</string>
     <string name="reset_password">パスワードを再設定する</string>
-    <string name="new_group">新しいブループ</string>
-    <string name="about_us">私たちに関しては</string>
-    <string name="faq">よくある質問</string>
+    <string name="new_group">グループ新規作成</string>
+    <string name="about_us">About Us</string>
+    <string name="faq">Q&amp;A</string>
     <string name="logout">ログアウト</string>
     <string name="remove">削除する</string>
     <string name="sent">送信済み</string>
@@ -446,7 +445,7 @@
     <string name="btn_submit">提出する</string>
     <string name="btn_update">更新</string>
     <string name="hint_answer">回答</string>
-    <string name="choose_secret_question">秘密の質問を選んでください</string>
+    <string name="choose_secret_question">秘密の質問を選択し回答してください</string>
     <string name="choose_new_secret_question">あなたの新しい秘密の質問を選んでください</string>
     <string name="skip">スキップ</string>
     <string name="complete">コンプリート</string>
@@ -462,7 +461,7 @@
     <string name="activity">アクティビティ</string>
     <string name="error_when_refresh_token">アクセストークンを更新できません：再試行してください！</string>
     <string name="registration">登録</string>
-    <string name="update_profile_success">アップデートが成功した。</string>
+    <string name="update_profile_success">更新完了</string>
     <string name="update_profile_fail">更新が失敗する</string>
     <string name="error_upload_image">アップロードに失敗しました</string>
     <string name="logout_all_devices">すべてのデバイスをログアウトする</string>
@@ -471,7 +470,7 @@
     <string name="message_remove_banner_success">バナーの成功を取り除く</string>
     <string name="hint_password">入力パスワード</string>
     <string name="error_reset_password">パスワードのリセットに失敗する</string>
-    <string name="warning">警告</string>
+    <string name="warning">エラー</string>
     <string name="error_tranferring_file">ファイル転送エラー：</string>
     <string name="message_download_attachment">このファイルを保存しますか？</string>
 
@@ -483,34 +482,30 @@
     <string name="user_sent_sticker">%1$sがステッカーを送信しました</string>
     <string name="tab_menu_menu">メニュー</string>
     <string name="tab_menu_conversation">チャット</string>
-    <string name="tab_menu_promotion">プロモーション</string>
-    <string name="tab_menu_my_page">私のページ</string>
+    <string name="tab_menu_promotion">プロモ</string>
+    <string name="tab_menu_my_page">マイページ</string>
     <string name="promotion_invite_friend">友達を招待</string>
     <string name="promotion_history">履歴</string>
     <string name="page_verify">アカウントの確認</string>
     <string name="message_edit">メッセージの編集</string>
     <string name="message_delete">メッセージを削除する</string>
     <string name="message_spam">スパム報告</string>
-    <string name="invite_friend_earn">多くのPTSコインを獲得するためにもっと友達を招待しましょう</string>
-    <string name="promotion_description">WRAPPYを使用するように他の友達を招待すると、あなたは報酬を受ける</string>
-    <string name="promotion_invite_friends">友達を招待</string>
+    <string name="invite_friend_earn">友達をWrappyへ招待してPTSボーナスを獲得しよう</string>
+    <string name="promotion_description">友達を招待しWrappyアプリに登録してくれたら報酬を受け取れます</string>
     <string name="verify_send_sms_fail">SMSの送信が失敗した。</string>
     <string name="verify_send_sms_success">SMSの送信が成功した。</string>
     <string name="verify_fail">検証失敗</string>
-    <string name="from">から</string>
-    <string name="security_question_change">セキュリティの質問を変更する</string>
+    <string name="security_question_change">秘密の質問を変更</string>
     <string name="security_change_old_question">あなたの古い秘密の質問に答える</string>
-    <string name="level">レベル</string>
     <string name="success">成功！</string>
     <string name="secu_success_description">秘密の質問の変更が成功した</string>
     <string name="fail">失敗</string>
     <string name="upload_fail">アップロードが失敗しました</string>
     <string name="cancel_and_home">このステップをキャンセルして、ログイン画面に戻りますか？</string>
-    <string name="invite_friends_text">友達を招待</string>
     <string name="email_tile">Eメール *</string>
-    <string name="logout_noti">あなたがこのデバイスからログアウトしたいですか？</string>
+    <string name="logout_noti">このデバイスからログアウトしますか？*ログアウトするとチャット履歴が消えてしまいます</string>
     <string name="share_title">共有方法を選択します。</string>
-    <string name="referral_text">あなたの紹介コードを入力します（オプション）</string>
+    <string name="referral_text">招待コード入力(オプション）</string>
     <string name="Referral">招待</string>
     <string name="update_profile">プロフィールを更新</string>
     <string name="question">質問%d</string>
@@ -521,9 +516,21 @@
     <string name="chat_message_item">%1$sチャット%2$s</string>
     <string name="message_kicked_from_group">%sは管理者によって削除されます</string>
     <string name="comming_soon">近日公開</string>
-    <string name="fullname">フールネーム</string>
-    <string name="info">インフォ</string>
+   <string name="fullname">名前</string>
+    <string name="info">お知らせ</string>
     <string name="wrong_format_password">パスワードは最低8文字の英数字、最低1文字の大文字、最低1文字の小文字、および最低1数字を含ませてください</string>
     <string name = "pattern_coutdown">"%s秒以内"</string>
     <string name = "passcode_coutdown">"%s秒以内"</string>
+ <string name="reset_your_password">パスワードのリセット</string>
+    <string name="receive_password_via_email">パスワードリセットのリンクがWrappyに登録されているE-mailに送られます。</string>
+    <string name="copy_and_paste_url">＊もしリンクがクリックできない場合は、URLをコピーしてブラウザに直接貼り付けて表示してください。</string>
+    <string name="back_to_login">ログインに戻る</string>
+    <string name="resend_link">もう一度送信</string>
+    <string name="local_time_format">yyyy年MMMdd日</string>
+    <string name="promotion_format">%1$s<b>%2$s</b>から　レベル(%3$s)</string>
+
+    <string-array name="profile_gender_display">
+        <item>女性</item>
+        <item>男性</item>
+    </string-array>
 </resources>
