fix bug login and register

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -535,4 +535,5 @@
     <string name="input_your_password">パスワードを入力</string>
     <string name="create_new_password">パスワードを登録</string>
     <string name="input_repeat_password">パスワード再入力</string>
+    <string name="forget_passcode">パスワードをお忘れですか</string>
 </resources>
